# rrna-cad

./: .gitignore  Cargo.toml  README.md  dot.ps  rna.ps
.cargo/: config.toml
benches/: benchmark.rs  pathfinding_mul_add.rs
config/: mesh.toml  motifs.toml
data/: test_graph.rrna
docs/: how_it_works.md
motifs/: 23S_Ribosomal_RNA.txt  3WJ_Phi29.txt  90-deg-kink.txt  Hairpins.txt  O4WJ.txt
output/: sequence.fa  sequence.out
src/: graph.rs  main.rs  motif_assembler.rs  motifs.rs  pathfinder.rs  plotter.rs
src/routines/: graph.rs  mesh.rs  mod.rs  rnafold_validator.rs  sequencer.rs  user_interface.rs
