[package]
name = "rrna-cad"
version = "0.1.0"
edition = "2021"

[dependencies]
# 3D linalg
glam = {version = "0.29", features=[
    "approx",
    "bytemuck",
    "fast-math",
    "core-simd",
    "serde",
]}

# Logging
log = "0.4"
simple_logger = "5.0"

# Serialisation
ron = "0.8"
serde = {version="1.0", features = ["derive"]}

# Plotting
plotters = "0.3"

# Fast hashing
rustc-hash = "2.0"

[profile.dev]
lto = "off"
opt-level = "z"

[profile.dev.package."*"]
opt-level = "z"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
opt-level = 3