[package]
name = "rrna-cad"
version = "0.1.0"
edition = "2021"

[dependencies]
# Fast hashing
rustc-hash = "2.0"
# Logging
log = "0.4"
simple_logger = "5.0"
# Serialisation / Deserialisation
toml = "0.8"
# Fast 3D vectors
glam = {version = "0.29", features=[
    "approx",
    "fast-math",
    "core-simd",
]}

# RNG
nanorand = "0.7"

# String similarity
strsim = "0.11"

# CLI progress bar
indicatif = "0.17"


#[dev-dependencies]
#criterion = "0.5"
#
#[[bench]]
#name = "benchmark"
#harness = false
#
#[[bin]]
#name = "bench_bin"
#path = "src/main.rs"

[profile.dev]
lto = "off"
opt-level = "z"

[profile.dev.package."*"]
opt-level = "z"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
opt-level = 3